@@ -10,4 +10,7 @@
   <ItemGroup>
     <PackageReference Include="tModLoader.CodeAssist" Version="0.1.*" />
   </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Projectiles\" />
+  </ItemGroup>
 </Project>
